# MedAugmentX

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark.py
docs/: API_EXAMPLES.md  API_REFERENCE.md  ARCHITECTURE.md  COMMERCIAL_ADOPTION.md  MILESTONES.md  README.md
examples/: README.md  custom_transform.py  dbt_pipeline.py  framework_interop.py  keypoints_bboxes.py  load_and_augment.py  new_transforms.py  quickstart.py  safe_augmentation.py
medaugment/: __init__.py  presets.py  serialization.py
medaugment/core/: __init__.py  base.py  compose.py  utils.py  volume.py
medaugment/io/: __init__.py  dicom.py  nifti.py
medaugment/transforms/: __init__.py
medaugment/transforms/intensity/: __init__.py  bias_field.py  blur.py  brightness_contrast.py  contrast.py  noise.py  window_level.py
medaugment/transforms/modality/: __init__.py
medaugment/transforms/modality/ct/: __init__.py  beam_hardening.py
medaugment/transforms/modality/mri/: __init__.py  ghosting.py  kspace.py
medaugment/transforms/modality/tomosynthesis/: __init__.py  blur.py  dropout.py  elastic.py  slab.py
medaugment/transforms/spatial/: __init__.py  affine.py  crop.py  elastic.py  flip.py
medaugmentx/: __init__.py  inspection.py  presets.py  serialization.py  validation.py
medaugmentx/core/: __init__.py  base.py  compose.py  geometry.py  utils.py  volume.py
medaugmentx/interop/: __init__.py  adapters.py
medaugmentx/io/: __init__.py  dicom.py  nifti.py
medaugmentx/transforms/: __init__.py
medaugmentx/transforms/intensity/: __init__.py  bias_field.py  blur.py  brightness_contrast.py  clahe.py  contrast.py  histogram.py  noise.py  sharpen.py  window_level.py
medaugmentx/transforms/modality/: __init__.py
medaugmentx/transforms/modality/ct/: __init__.py  beam_hardening.py  (+1 more)
medaugmentx/transforms/spatial/: __init__.py  affine.py  crop.py  dropout.py  elastic.py  flip.py  resize.py
tests/: conftest.py  test_inspection.py  test_presets.py  test_serialization.py  test_validation.py
tests/core/: test_base.py  test_compose.py  test_geometry.py  test_volume.py
tests/integration/: test_full_pipeline.py
tests/interop/: test_adapters.py
tests/io/: test_dicom.py  test_nifti.py
tests/transforms/intensity/: test_bias_field.py  test_blur.py  test_brightness_contrast.py  test_clahe.py  test_contrast.py  test_histogram.py  test_median_blur.py  test_noise.py  test_sharpen.py  test_window_level.py
tests/transforms/modality/: test_ct.py  test_ct_metal.py  test_dbt_extra.py  test_modality_exports.py  test_mri.py  test_mri_motion.py  test_tomosynthesis.py  test_xray.py
tests/transforms/spatial/: test_affine.py  test_crop.py  test_dropout.py  test_elastic.py  test_flip.py  test_resize.py  test_targets.py
(+14 files in other folders)
